network-policy-demo/end_demo/bouvier/allow-from-bouviers-to-marge-bouvier.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-bouviers-to-marge

spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              deployment: marge
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: simpson
  policyTypes:
    - Ingress
