network-policy-demo/end_demo/bouvier/default-deny-bouvier.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny

spec:
  podSelector: {}
  policyTypes:
  - Ingress
